--- a/package.json
+++ b/package.json
@@ -11,27 +11,24 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.60.0",
+    "@aws-cdk/assert": "^1.62.0",
     "@types/jest": "^25.2.1",
     "@types/node": "10.17.5",
     "jest": "^25.5.0",
     "ts-jest": "^25.3.1",
-    "aws-cdk": "1.60.0",
+    "aws-cdk": "^1.62.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "^1.60.0",
-    "@aws-cdk/aws-codedeploy": "^1.60.0",
-    "@aws-cdk/aws-codepipeline": "^1.60.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.60.0",
-    "@aws-cdk/aws-kms": "^1.60.0",
-    "@aws-cdk/aws-lambda": "^1.60.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.60.0",
-    "@aws-cdk/aws-s3": "^1.60.0",
-    "@aws-cdk/aws-secretsmanager": "^1.60.0",
-    "@aws-cdk/aws-sqs": "^1.60.0",
-    "@aws-cdk/core": "1.60.0",
+    "@aws-cdk/aws-codebuild": "^1.62.0",
+    "@aws-cdk/aws-codepipeline": "^1.62.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.62.0",
+    "@aws-cdk/aws-kms": "^1.62.0",
+    "@aws-cdk/aws-lambda": "^1.62.0",
+    "@aws-cdk/aws-secretsmanager": "^1.62.0",
+    "@aws-cdk/aws-sqs": "^1.62.0",
+    "@aws-cdk/core": "^1.62.0",
     "source-map-support": "^0.5.16"
   }
 }
