--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mail-service",
+  "name": "cmfive-mail-service-cdk",
   "version": "0.1.0",
   "bin": {
     "mail-service": "bin/pipeline.js"
@@ -26,6 +26,7 @@
     "@aws-cdk/aws-codepipeline-actions": "^1.62.0",
     "@aws-cdk/aws-kms": "^1.62.0",
     "@aws-cdk/aws-lambda": "^1.62.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.62.0",
     "@aws-cdk/aws-secretsmanager": "^1.62.0",
     "@aws-cdk/aws-sqs": "^1.62.0",
     "@aws-cdk/core": "^1.62.0",
