--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@aws-cdk/aws-codebuild": "^1.62.0",
     "@aws-cdk/aws-codepipeline": "^1.62.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.62.0",
+    "@aws-cdk/aws-iam": "^1.62.0",
     "@aws-cdk/aws-kms": "^1.62.0",
     "@aws-cdk/aws-lambda": "^1.62.0",
     "@aws-cdk/aws-lambda-event-sources": "^1.62.0",
     "@aws-cdk/aws-secretsmanager": "^1.62.0",
     "@aws-cdk/aws-sqs": "^1.62.0",
     "@aws-cdk/core": "^1.62.0",
+    "dotenv": "^8.2.0",
     "source-map-support": "^0.5.16"
   }
 }
